# doublemetaphone-haskell

./: COPYING  DoubleMetaphone.hs  README.md  double-metaphone.cabal
